Successfully configured BaseTest and LoginTest classes for LambdaTest.com cloud execution